Fix wrapping the michelson column to a new line in the first library element

--- a/src/components/shared/addButton/AddButton.scss
+++ b/src/components/shared/addButton/AddButton.scss
@@ -8,7 +8,7 @@
 
     img {
         width: 40px;
-        padding: 10px;
+        padding-top: 10px;
         cursor: pointer;
     }
 }
